2007-05-29  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptoolbox-dnd.c (gimp_toolbox_drop_drawable): set
	"linked" and "lock-alpha" to FALSE too.

2007-05-29  Sven Neumann  <sven@gimp.org>

	* app/base/tile.[ch]: renamed tile_sanitize_rowhints() to
	tile_allocate_rowhints().
	
	* app/base/tile-manager.c
	* app/paint-funcs/paint-funcs.c: changed accordingly.

2007-05-29  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptoolbox-dnd.c (gimp_toolbox_drop_drawable): also
	set the mode of the new layer to NORMAL and its opacity to OPAQUE.

2007-05-29  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/imagemap/imap_object.c: Use C89 declarations.

2007-05-29  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-dnd.c
	* app/widgets/gimptoolbox-dnd.c: make drop-duplicated drawables
	visible before adding them to the image. Spotted by Jimmac.

2007-05-28  Manish Singh  <yosh@gimp.org>

        * plug-ins/pygimp/gimpcolormodule.c
        * plug-ins/pygimp/gimpenumsmodule.c
        * plug-ins/pygimp/gimpmodule.c
        * plug-ins/pygimp/gimpthumbmodule.c
        * plug-ins/pygimp/gimpuimodule.c
        * plug-ins/pygimp/pygimp-drawable.c
        * plug-ins/pygimp/pygimp-image.c
        * plug-ins/pygimp/pygimp-pdb.c
        * plug-ins/pygimp/pygimp-tile.c: cleanups.

2007-05-28  Michael Natterer  <mitch@gimp.org>

	* app/base/tile-manager.c (tile_manager_get): allocate
	tile->rowhint using tile_sanitize_rowhints() (which uses GSlice)
	instead of g_memdup(). Fixes bug #441878.

2007-05-28  Michael Natterer  <mitch@gimp.org>

	Don't leave the user without progress bar just because the
	display's statusbar is invisible:

	* app/display/gimpstatusbar.[ch]: if the statusbar is invisible
	when a progress wants to be shown, temporarily show it, recording
	the fact in the new boolean "progress_shown" member. Added new API
	gimp_statusbar_get/set_visible() which is aware of the new
	temporary visibility state.
