@@ -1112,7 +1112,7 @@ void
 gimp_item_parasite_attach (GimpItem           *item,
                            const GimpParasite *parasite)
 {
-  GimpParasite *copy;
+  GimpParasite  copy;
 
   g_return_if_fail (GIMP_IS_ITEM (item));
   g_return_if_fail (parasite != NULL);
@@ -1120,53 +1120,51 @@ gimp_item_parasite_attach (GimpItem           *item,
   /*  make a temp copy of the struct because
    *  gimp_parasite_shift_parent() changes it
    */
-  copy = g_memdup (parasite, sizeof (GimpParasite));
+  memcpy (&copy, parasite, sizeof (GimpParasite));
 
   if (gimp_item_is_attached (item))
     {
       /*  only set the dirty bit manually if we can be saved and the new
        *  parasite differs from the current one and we aren't undoable
        */
-      if (gimp_parasite_is_undoable (copy))
+      if (gimp_parasite_is_undoable (&copy))
         {
           /* do a group in case we have attach_parent set */
           gimp_image_undo_group_start (item->image,
                                        GIMP_UNDO_GROUP_PARASITE_ATTACH,
                                        _("Attach Parasite"));
 
-          gimp_image_undo_push_item_parasite (item->image, NULL, item, copy);
+          gimp_image_undo_push_item_parasite (item->image, NULL, item, &copy);
         }
-      else if (gimp_parasite_is_persistent (copy) &&
-               ! gimp_parasite_compare (copy,
+      else if (gimp_parasite_is_persistent (&copy) &&
+               ! gimp_parasite_compare (&copy,
                                         gimp_item_parasite_find
-                                        (item, gimp_parasite_name (copy))))
+                                        (item, gimp_parasite_name (&copy))))
         {
           gimp_image_undo_push_cantundo (item->image,
                                          _("Attach Parasite to Item"));
         }
     }
 
-  gimp_parasite_list_add (item->parasites, copy);
+  gimp_parasite_list_add (item->parasites, &copy);
 
-  if (gimp_parasite_has_flag (copy, GIMP_PARASITE_ATTACH_PARENT))
+  if (gimp_parasite_has_flag (&copy, GIMP_PARASITE_ATTACH_PARENT))
     {
-      gimp_parasite_shift_parent (copy);
-      gimp_image_parasite_attach (item->image, copy);
+      gimp_parasite_shift_parent (&copy);
+      gimp_image_parasite_attach (item->image, &copy);
     }
-  else if (gimp_parasite_has_flag (copy, GIMP_PARASITE_ATTACH_GRANDPARENT))
+  else if (gimp_parasite_has_flag (&copy, GIMP_PARASITE_ATTACH_GRANDPARENT))
     {
-      gimp_parasite_shift_parent (copy);
-      gimp_parasite_shift_parent (copy);
-      gimp_parasite_attach (item->image->gimp, copy);
+      gimp_parasite_shift_parent (&copy);
+      gimp_parasite_shift_parent (&copy);
+      gimp_parasite_attach (item->image->gimp, &copy);
     }
 
   if (gimp_item_is_attached (item) &&
-      gimp_parasite_is_undoable (copy))
+      gimp_parasite_is_undoable (&copy))
     {
       gimp_image_undo_group_end (item->image);
     }
-
-  g_free (copy);
 }
 
 void
